PROJECT(optflow)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_VERBOSE_MAKEFILE ON)

ADD_DEFINITIONS(-Wall -O2 -frounding-math)

OPTION(WITH_BOOST_PROGRAM_OPTIONS "compile with Boost.Program_options (enables command-line interface)" ON)
OPTION(WITH_CGAL "compile with CGAL (enables sparse motion field and triangulation support)" OFF)
OPTION(WITH_OPENCV "compile with OpenCV (enables OpenCV motion extraction algorithms)" OFF)
OPTION(WITH_MATLAB "compile with MATLAB interface" OFF)

IF(WITH_CGAL)
  ADD_DEFINITIONS(-DWITH_CGAL)
  LIST(APPEND CMAKE_PREFIX_PATH "/usr/local/opt/cgal")
  find_package(CGAL REQUIRED)
  SET(LIBS ${LIBS}  CGAL)
ENDIF()

IF(WITH_OPENCV)
  ADD_DEFINITIONS(-DWITH_OPENCV)
  LIST(APPEND CMAKE_PREFIX_PATH "/usr/local/opt/opencv3")
  find_package(OpenCV REQUIRED)
  INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
  SET(LIBS ${LIBS} ${OpenCV_LIB_COMPONENTS}  )
ENDIF()

ADD_SUBDIRECTORY(lib)
IF(WITH_BOOST_PROGRAM_OPTIONS)
  ADD_DEFINITIONS(-DWITH_BOOST_PROGRAM_OPTIONS)
  ADD_SUBDIRECTORY(bin)
ENDIF()

IF(WITH_MATLAB)
  ADD_SUBDIRECTORY(matlab)
ENDIF()

